--- a/requirements.txt
+++ b/requirements.txt
@@ -36,11 +36,20 @@ cycler==0.12.1
 dataclasses-json==0.6.7
 debugpy==1.8.12
 decorator==5.1.1
+deepsearch-glm==1.0.0
 defusedxml==0.7.1
 Deprecated==1.2.15
+dill==0.3.9
+dirtyjson==1.0.8
 distro==1.9.0
+docling==2.16.0
+docling-core==2.15.1
+docling-ibm-models==3.3.0
+docling-parse==3.1.1
 durationpy==0.9
+easyocr==1.7.2
 emoji==2.14.1
+et_xmlfile==2.0.0
 eval_type_backport==0.2.2
 executing==2.1.0
 faiss-cpu==1.9.0.post1
@@ -57,7 +66,8 @@ gitdb==4.0.12
 GitPython==3.1.44
 google-auth==2.37.0
 googleapis-common-protos==1.66.0
-grpcio==1.69.0
+greenlet==3.1.1
+grpcio==1.67.1
 h11==0.14.0
 html5lib==1.1
 httpcore==1.0.7
@@ -67,6 +77,7 @@ httpx-sse==0.4.0
 huggingface-hub==0.27.1
 humanfriendly==10.0
 idna==3.10
+imageio==2.37.0
 importlib_metadata==8.5.0
 importlib_resources==6.5.2
 iopath==0.1.10
@@ -79,9 +90,11 @@ Jinja2==3.1.5
 jiter==0.8.2
 joblib==1.4.2
 json5==0.10.0
+jsonlines==3.1.0
 jsonpatch==1.33
 jsonpath-python==1.0.6
 jsonpointer==3.0.0
+jsonref==1.1.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 jupyter==1.1.1
@@ -107,18 +120,42 @@ langchain-text-splitters==0.3.5
 langdetect==1.0.9
 langsmith==0.2.11
 layoutparser==0.3.4
+lazy_loader==0.4
+llama-cloud==0.1.9
+llama-index==0.12.12
+llama-index-agent-openai==0.4.2
+llama-index-cli==0.4.0
+llama-index-core==0.12.12
+llama-index-embeddings-huggingface==0.5.1
+llama-index-embeddings-openai==0.3.1
+llama-index-indices-managed-llama-cloud==0.6.4
+llama-index-llms-huggingface-api==0.3.1
+llama-index-llms-ollama==0.5.0
+llama-index-llms-openai==0.3.13
+llama-index-multi-modal-llms-openai==0.4.2
+llama-index-program-openai==0.3.1
+llama-index-question-gen-openai==0.3.0
+llama-index-readers-docling==0.3.0
+llama-index-readers-file==0.4.3
+llama-index-readers-llama-parse==0.4.0
+llama-index-vector-stores-milvus==0.5.0
+llama-parse==0.5.19
 lxml==5.3.0
 markdown-it-py==3.0.0
+marko==2.1.2
 MarkupSafe==3.0.2
 marshmallow==3.25.1
 matplotlib==3.10.0
 matplotlib-inline==0.1.7
 mdurl==0.1.2
+milvus-lite==2.4.11
 mistune==3.1.0
 mmh3==5.0.1
 monotonic==1.6
+mpire==2.10.2
 mpmath==1.3.0
 multidict==6.1.0
+multiprocess==0.70.17
 mypy-extensions==1.0.0
 narwhals==1.22.0
 nbclient==0.10.2
@@ -127,16 +164,20 @@ nbformat==5.10.4
 ndjson==0.3.1
 nest-asyncio==1.6.0
 networkx==3.4.2
-nltk==3.8.1
+ninja==1.11.1.3
+nltk==3.9.1
 notebook==7.3.2
 notebook_shim==0.2.4
 numpy==1.26.4
 oauthlib==3.2.2
 olefile==0.47
+ollama==0.4.7
 onnx==1.17.0
 onnxruntime==1.20.1
 openai==1.59.7
 opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
+openpyxl==3.1.5
 opentelemetry-api==1.29.0
 opentelemetry-exporter-otlp-proto-common==1.29.0
 opentelemetry-exporter-otlp-proto-grpc==1.29.0
@@ -158,7 +199,7 @@ pdfminer.six==20231228
 pdfplumber==0.11.5
 pexpect==4.9.0
 pi_heif==0.21.0
-pillow==11.1.0
+pillow==10.4.0
 platformdirs==4.3.6
 portalocker==3.1.1
 posthog==3.8.3
@@ -172,6 +213,7 @@ pure_eval==0.2.3
 pyarrow==19.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+pyclipper==1.3.0.post6
 pycparser==2.22
 pycryptodome==3.21.0
 pydantic==2.10.5
@@ -179,19 +221,23 @@ pydantic-settings==2.7.1
 pydantic_core==2.27.2
 pydeck==0.9.1
 Pygments==2.19.1
+pymilvus==2.5.4
 pyparsing==3.2.1
 pypdf==5.1.0
 pypdfium2==4.30.1
 PyPika==0.48.9
 pyproject_hooks==1.2.0
 pytesseract==0.3.13
+python-bidi==0.6.3
 python-dateutil==2.9.0.post0
+python-docx==1.1.2
 python-dotenv==1.0.1
 python-iso639==2024.10.22
 python-json-logger==3.2.1
 python-magic==0.4.27
 python-multipart==0.0.20
 python-oxmsg==0.0.1
+python-pptx==1.0.2
 pytz==2024.2
 PyYAML==6.0.2
 pyzmq==26.2.0
@@ -206,9 +252,15 @@ rfc3986-validator==0.1.1
 rich==13.9.4
 rpds-py==0.22.3
 rsa==4.9
+Rtree==1.3.0
 safetensors==0.5.2
+scikit-image==0.25.0
+scikit-learn==1.6.1
 scipy==1.15.1
+semchunk==2.2.2
 Send2Trash==1.8.3
+sentence-transformers==3.3.1
+shapely==2.0.6
 shellingham==1.5.4
 six==1.17.0
 smmap==5.0.2
@@ -218,13 +270,17 @@ SQLAlchemy==2.0.37
 stack-data==0.6.3
 starlette==0.41.3
 streamlit==1.41.1
+striprtf==0.0.26
 sympy==1.13.1
+tabulate==0.9.0
 tenacity==9.0.0
 terminado==0.18.1
+threadpoolctl==3.5.0
+tifffile==2025.1.10
 tiktoken==0.8.0
 timm==1.0.13
 tinycss2==1.4.0
-tokenizers==0.20.3
+tokenizers==0.21.0
 toml==0.10.2
 torch==2.5.1
 torchvision==0.20.1
@@ -232,11 +288,12 @@ tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
 transformers==4.48.0
-typer==0.15.1
+typer==0.12.5
 types-python-dateutil==2.9.0.20241206
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.2
+ujson==5.10.0
 unstructured==0.16.13
 unstructured-client==0.29.0
 unstructured-inference==0.8.2
@@ -253,5 +310,6 @@ websocket-client==1.8.0
 websockets==14.1
 widgetsnbextension==4.0.13
 wrapt==1.17.2
+XlsxWriter==3.2.1
 yarl==1.18.3
 zipp==3.21.0
